--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <pre id="spitter" style="white-space: pre-wrap; height: 56.5px; margin-right: 15px; margin-bottom: 7px;"></pre>
     <pre id="spitter1" style="white-space: pre-wrap; height: 56.5px; margin-right: 15px;"></pre>
-    <div id="coloredNick"></div>
+    <div id="coloredNick" style="word-wrap: break-word;"></div>
     <script src="script.js"></script>
   </body>
 </html>
