--- a/Hexnicks/index.html
+++ b/Hexnicks/index.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
-    <link rel="shortcut icon" href="assets/images/rgb.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/images/rgb.png" type="image/x-icon">
     <title>RGB Gradient Creator</title>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
   
@@ -36,14 +36,30 @@
 
       <label for="steps">Nickname</label>
       <input class="form-control col-md-3" id="nickname" name="nickname" type="text" placeholder="Your Nickname" value="OliBest" oninput="javascript: updateSpitter()" onchange="javascript: updateSpitter()">
-    </div><div class="col-md-2"">
-      <div class="colorpadding"><div id="colors"></div></div>
     </div>
-    <pre id="spitter"></pre>
-    <div id="warning1"></div>
-    <pre id="spitter1"></pre>
-    <div id="warning2"></div>
+    <div id="colors" class="col-md-2" style="padding-left: 0;"></div>
+
+    <div id="output">
+      <label id="label4" for="spitter">Output</label>
+      <label id="graylabel2" class="gray" for="spitter" style="font-weight: normal;">This is what you put in the chat. Click on it to copy.</label>
+      <pre id="spitter" style="white-space: pre-wrap; height: 95px; margin-right: 15px; font-family: MinecraftRegular;" onclick="copyTextToClipboard(document.getElementById('spitter').textContent);"></pre>
+      <p id="error" style="display: none; margin-bottom: 10px;">This is more than 256 characters and may not fit in the chat box. You may ignore this if you're using a server console.</p>
+    </div>
+
+
     <div id="coloredNick" style="word-wrap: break-word;"></div>
+
+    <div id="typeslist"><!--  Yoinked from saboor -->
+      <label id="Typelabel" style="margin-bottom: 0px;">Type</label>
+      <select type="select" id="types" onchange="rgbtype = this.options[this.selectedIndex].innerText; updateSpitter();">
+        <option value='0'>chat (&#rrggbb)</option>
+        <option value='1'>chat (&x&r&r&g&g&b&b)</option>
+        <option value='2'>/nick (&#rrggbb)</option> 
+        <option value='3'>/nick (&x&r&r&g&g&b&b)</option>
+        <option value='4'>console (§x§r§r§g§g§b§b)</option>
+      </select>
+    </div>
+
     <script src="script.js"></script>
     <script src="../assets/js/jscolor.js"></script>
   </body>
