--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#002f30">
-    <title>Code Projects</title>
+    <link rel="shortcut icon" href="../assets/images/rgb.png" type="image/x-icon">
+    <title>EasyMC</title>
     <link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
     <nav class="navbar navbar-inverse">
