credit  https://github.com/donatj/Circle-Generator for base code

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="./Hexnicks/">RGB Nicknames</a></li>
+            <li><a href="./CircleGen/">Circle Generator</a></li>
             <li><a href="#">Coming Soon</a></li>
           </ul>
         </div>
