--- a/Hexnicks/index.html
+++ b/Hexnicks/index.html
@@ -9,6 +9,7 @@
         <ul class="nav navbar-nav">
           <li><a href="../index.html">Home</a></li>
           <li class="active" ><a href="#">RGB Nicknames</a></li>
+          <li><a href="./CircleGen/">Circle Generator</a></li>
           <li><a href="#">Coming Soon</a></li>
         </ul>
       </div>
