--- a/CircleGen/index.html
+++ b/CircleGen/index.html
@@ -9,9 +9,9 @@
             <a class="navbar-brand" href="#">EasyMC</a>
           </div>
           <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="./Hexnicks/">RGB Nicknames</a></li>
-            <li class="active"><a href="./CircleGen/">Circle Generator</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../Hexnicks/">RGB Nicknames</a></li>
+            <li class="active"><a href="#">Circle Generator</a></li>
             <li><a href="#">Coming Soon</a></li>
           </ul>
         </div>
