--- a/CircleGen/index.html
+++ b/CircleGen/index.html
@@ -10,7 +10,7 @@
           </div>
           <ul class="nav navbar-nav">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="../Hexnicks/">RGB Nicknames</a></li>
+            <li><a href="../Hexnicks/index.html">RGB Nicknames</a></li>
             <li class="active"><a href="#">Circle Generator</a></li>
             <li><a href="#">Coming Soon</a></li>
           </ul>
