--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="shortcut icon" href="../assets/images/rgb.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/rgb.png" type="image/x-icon">
     <title>EasyMC</title>
     <link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
@@ -18,8 +18,5 @@
       </nav>
     <body>
     </head>
-    
-    <script src="./header-footer/footer.js"></script>
-    
     </body>
     </html>
