--- a/CircleGen/index.html
+++ b/CircleGen/index.html
@@ -3,19 +3,7 @@
 <head>
     <link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="#">EasyMC</a>
-          </div>
-          <ul class="nav navbar-nav">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../Hexnicks/index.html">RGB Nicknames</a></li>
-            <li class="active"><a href="#">Circle Generator</a></li>
-            <li><a href="#">Coming Soon</a></li>
-          </ul>
-        </div>
-      </nav>
+    <link rel="shortcut icon" href="/assets/images/rgb.png" type="image/x-icon">
 <script src="https://ajax.googleapis.com/ajax/libs/mootools/1.3.2/mootools.js"></script>
 <script src="Base64.js"></script>
 <script src="range-polyfill.js"></script>
@@ -28,6 +16,19 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">EasyMC</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../Hexnicks/index.html">RGB Nicknames</a></li>
+        <li class="active"><a href="#">Circle Generator</a></li>
+        <li><a href="#">Coming Soon</a></li>
+      </ul>
+    </div>
+  </nav>
 <noscript><strong>Circle generator requires JavaScript to be turned on!</strong><br /></noscript>
 Width :
 <input tabindex="1" type="number" size="5" id="diameter" value="9" autocomplete="off" autofocus="autofocus">
