updated colors / fonts

--- a/Hexnicks/index.html
+++ b/Hexnicks/index.html
@@ -49,7 +49,8 @@
 
     <div id="typeslist"><!--  Yoinked from saboor -->
       <label id="Typelabel" style="margin-bottom: 0px;">Type</label>
-      <select type="select" id="types" style="width:120px; border-radius: 5px;" onchange="rgbtype = this.options[this.selectedIndex].innerText; updateSpitter(event);">
+      <!--  Yoinked from saboor -->
+      <select type="select" id="types" style="width:150px; border-radius: 5px; color:black;" onchange="rgbtype = this.options[this.selectedIndex].innerText; updateSpitter(event);">
         <option value='0'>chat (&#rrggbb)</option>
         <option value='1'>chat (&x&r&r&g&g&b&b)</option>
         <option value='2'>/nick (&#rrggbb)</option> 
