--- a/Hexnicks/index.html
+++ b/Hexnicks/index.html
@@ -48,7 +48,7 @@
     <div id="coloredNick" style="word-wrap: break-word;"></div>
 
     <div id="typeslist"><!--  Yoinked from saboor -->
-      <label id="Typelabel" style="margin-bottom: 0px;">Type</label>
+      <label id="Typelabel">Type</label>
       <!--  Yoinked from saboor -->
       <select type="select" id="types" style="width:150px; border-radius: 5px; color:black;" onchange="rgbtype = this.options[this.selectedIndex].innerText; updateSpitter(event);">
         <option value='0'>chat (&#rrggbb)</option>
@@ -60,19 +60,19 @@
     </div>
     <div id="dbold">
       <input type="checkbox" id="bold" onclick="updateSpitter(event);"></input>
-      <label for="bold" style="margin-bottom: 0px;margin-top: 15px;"> Bold output</label>
+      <label for="bold" style="margin-top: 15px;"> Bold output</label>
     </div>
     <div id="ditalics">
       <input type="checkbox" id="italics" onclick="updateSpitter(event);"></input>
-      <label for="italics" style="margin-bottom: 0px;margin-top: 0px;"> Italic output</label>
+      <label for="italics"> Italic output</label>
     </div>
     <div id="dunderline">
       <input type="checkbox" id="underline" onclick="updateSpitter(event);"></input>
-      <label for="underline" style="margin-bottom: 0px;margin-top: 0px;"> Underlined output</label>
+      <label for="underline"> Underlined output</label>
     </div>
     <div id="dstrike">
       <input type="checkbox" id="strike" onclick="updateSpitter(event);"></input>
-      <label for="strike" style="margin-bottom: 0px;margin-top: 0px;"> Striked output</label>
+      <label for="strike"> Striked output</label>
     </div>
     <script src="script.js"></script>
     <script src="../assets/js/jscolor.js"></script>
