--- a/Hexnicks/index.html
+++ b/Hexnicks/index.html
@@ -36,15 +36,18 @@
       <label for="color2">Second Hex Color</label>
       <input class="form-control col-md-1" id="color2" name="color2" value="EB00FF" data-jscolor="{preset:'small dark', position:'right'}" oninput="javascript: updateSpitter(event)" onchange="javascript: updateSpitter(event)" ">
 
-      <label for="color3">Third Hex Color</label>
-      <input class="form-control col-md-1" id="color3" name="color2" value="FF0000" data-jscolor="{preset:'small dark', position:'right'}" oninput="javascript: updateSpitter(event)" onchange="javascript: updateSpitter(event)" ">
+      <label id="label3" for="color3" style="display: none;">Third Hex Color</label>
+      <input style="position: inherit; display: none;" class="form-control col-md-2" id="color3" name="color3" value="FFFFFF" data-jscolor="{preset:'small dark', position:'right'}" oninput="updateSpitter(event)" onchange="updateSpitter(event)">
+
+      <label id="label4" for="color4" style="display: none;">Fourth Hex Color</label>
+      <input style="position: inherit; display: none;" class="form-control col-md-1" id="color4" name="color4" value="FFFFFF" data-jscolor="{preset:'small dark', position:'right'}" oninput="updateSpitter(event)" onchange="updateSpitter(event)">
 
       <label for="steps">Nickname</label>
       <input class="form-control col-md-3" id="nickname" name="nickname" type="text" placeholder="Your Nickname" value="EasyMC" oninput="javascript: updateSpitter(event)" onchange="javascript: updateSpitter(event)">
     </div>
 
     <div id="output">
-      <label id="label4" for="spitter">Output</label>
+      <label id="label5" for="spitter">Output</label>
       <label id="graylabel2" class="gray" for="spitter" style="font-weight: normal;">This is what you put in the chat. Click on it to copy.</label>
       <pre id="spitter" style="white-space: pre-wrap; height: 95px; margin-right: 15px; font-family: MinecraftRegular;" onclick="copyTextToClipboard(document.getElementById('spitter').textContent);"></pre>
       <p id="error" style="display: none; margin-bottom: 10px;">This is more than 256 characters and may not fit in the chat box. You may ignore this if you're using a server console.</p>
@@ -53,14 +56,22 @@
     <div id="coloredNick" style="word-wrap: break-word;"></div>
   </div>
     <div id="typeslist"><!--  Yoinked from saboor -->
-      <label id="Typelabel">Type</label>
+      <label style="margin-bottom: 0px; margin-top: 15px;">Type</label>
       <!--  Yoinked from saboor -->
-      <select type="select" id="types" style="width:150px; border-radius: 5px; color:black;" onchange="rgbtype = this.options[this.selectedIndex].innerText; updateSpitter(event);">
+      <select type="select" id="types" style="width:150px; border-radius: 10px; padding-right: 6px; padding-left: 6px; padding-top: 6px; padding-bottom: 6px; color:black;" onchange="rgbtype = this.options[this.selectedIndex].innerText; updateSpitter(event);">
         <option value='0'>chat (&#rrggbb)</option>
         <option value='1'>chat (&x&r&r&g&g&b&b)</option>
         <option value='2'>/nick (&#rrggbb)</option> 
         <option value='3'>/nick (&x&r&r&g&g&b&b)</option>
         <option value='4'>console (§x§r§r§g§g§b§b)</option>
+      </select>
+    </div>
+    <div id="coloramountlist">
+      <label style="margin-bottom: 0px; margin-top: 15px;">Number of colors</label>
+      <select style="width:50px; border-radius: 10px; padding-right: 6px; padding-left: 6px; padding-top: 6px; padding-bottom: 6px; color:black;" type="select" id="numOfColors" onchange="numberOfColors = this.options[this.selectedIndex].innerText; updateSpitter(event); hideColors();">
+        <option value='2'>2</option>
+        <option value='3'>3</option>
+        <option value='4'>4</option>
       </select>
     </div>
     <div id="formats">
@@ -79,10 +90,6 @@
       <div id="dstrike">
         <input type="checkbox" id="strike" onclick="updateSpitter(event);"></input>
         <label for="strike"> Striked output</label>
-      </div>
-      <div id="d3colors">
-        <input type="checkbox" id="threecolors" onclick="updateSpitter(event);"></input>
-        <label for="strike"> Use 3 Colors</label>
       </div>
     </div>
     <script src="script.js"></script>
