fixed useless code

--- a/Hexnicks/index.html
+++ b/Hexnicks/index.html
@@ -56,7 +56,7 @@
     <div id="coloredNick" style="word-wrap: break-word;"></div>
   </div>
     <div id="typeslist"><!--  Yoinked from saboor -->
-      <label style="margin-bottom: 0px; margin-top: 15px;">Type</label>
+      <label style="margin-top: 15px;">Type</label>
       <!--  Yoinked from saboor -->
       <select type="select" id="types" style="width:150px; border-radius: 10px; padding-right: 6px; padding-left: 6px; padding-top: 6px; padding-bottom: 6px; color:black;" onchange="rgbtype = this.options[this.selectedIndex].innerText; updateSpitter(event);">
         <option value='0'>chat (&#rrggbb)</option>
@@ -67,7 +67,7 @@
       </select>
     </div>
     <div id="coloramountlist">
-      <label style="margin-bottom: 0px; margin-top: 15px;">Number of colors</label>
+      <label style="margin-top: 15px;">Number of colors</label>
       <select style="width:50px; border-radius: 10px; padding-right: 6px; padding-left: 6px; padding-top: 6px; padding-bottom: 6px; color:black;" type="select" id="numOfColors" onchange="numberOfColors = this.options[this.selectedIndex].innerText; updateSpitter(event); hideColors();">
         <option value='2'>2</option>
         <option value='3'>3</option>
