--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="shortcut icon" href="./assets/images/rgb.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/emc.png" type="image/x-icon">
     <title>EasyMC</title>
     <link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
@@ -12,7 +12,8 @@
             <li class="active"><a href="#">Home</a></li>
             <li><a href="./Hexnicks/">RGB Nicknames</a></li>
             <li><a href="./CircleGen/">Circle Generator</a></li>
-            <li><a href="#">Coming Soon</a></li>
+            <li><a href="../AnimTAB/">Animated TAB</a></li>
+          <li><a href="#">Coming Soon</a></li>
           </ul>
         </div>
       </nav>
