--- a/CircleGen/index.html
+++ b/CircleGen/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
-    <link rel="shortcut icon" href="/assets/images/rgb.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/images/emc.png" type="image/x-icon">
 <script src="https://ajax.googleapis.com/ajax/libs/mootools/1.3.2/mootools.js"></script>
 <script src="Base64.js"></script>
 <script src="range-polyfill.js"></script>
