--- a/Hexnicks/index.html
+++ b/Hexnicks/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script>
       function warning() {
-        alert("Slight visua bugs are still present working on fixing those!");
+        alert("Slight visual bugs are still present working on fixing those!");
       }
       </script>
   </head>
