--- a/CircleGen/index.html
+++ b/CircleGen/index.html
@@ -25,6 +25,7 @@
         <li><a href="../index.html">Home</a></li>
         <li><a href="../Hexnicks/">RGB Nicknames</a></li>
         <li class="active"><a href="#">Circle Generator</a></li>
+        <li><a href="../AnimTAB/">Animated TAB</a></li>
         <li><a href="#">Coming Soon</a></li>
       </ul>
     </div>
