--- a/AnimTAB/index.html
+++ b/AnimTAB/index.html
@@ -31,6 +31,7 @@
     <h1 id="title" style="word-wrap: break-word;" >
       Animated TAB</h1>
     <p style="padding-bottom: 10px;">Hex color nickname creator</p>
+    <div id="inputOutput">
     <div class="editors col-md-2">
       <label for="color1">First Hex Color</label> 
       <input class="form-control col-md-1" id="color1" name="color1" value="0000ff" data-jscolor="{preset:'small dark', position:'right'}" oninput="javascript: updateSpitter(event)" onchange="javascript: updateSpitter(event)" ">
@@ -45,15 +46,17 @@
       <input class="form-control col-md-3" id="updateSpeed" name="updateSpeed" type="text" placeholder="Update Speed" value="50" oninput="javascript: updateSpitter(event)" onchange="javascript: updateSpitter(event)">
     </div>
 
-    <div id="output">
-      <label id="label4" for="spitter">Output</label>
-      <label id="graylabel2" class="gray" for="spitter" style="font-weight: normal;">This is what you put in the animations.yml file. the file location is plugins/TAB/animations.yml.</label>
-      <pre id="spitter" style="white-space: pre-wrap; height: 95px; margin-right: 15px; font-family: MinecraftRegular;"></pre>
-      <p id="error" style="display: none; margin-bottom: 10px;">TAB only allows the change-interval to be divisible by 50, Your number has been rounded up</p>
+    <div id="outputColumn">
+      <div id="output">
+        <label id="label4" for="spitter">Output</label>
+        <label id="graylabel2" class="gray" for="spitter" style="font-weight: normal;">This is what you put in the animations.yml file. the file location is plugins/TAB/animations.yml.</label>
+        <pre id="spitter" style="white-space: pre-wrap; height: 95px; margin-right: 15px; font-family: MinecraftRegular;"></pre>
+        <p id="error" style="display: none; margin-bottom: 10px;">TAB only allows the change-interval to be divisible by 50, Your number has been rounded up</p>
+      </div>
+
+      <div id="coloredNick" style="word-wrap: break-word;"></div>
     </div>
-
-    <div id="coloredNick" style="word-wrap: break-word;"></div>
-
+  </div>
     <div id="typeslist" style="display: flex; flex-direction: column;">
       <div id="dbold">
         <input type="checkbox" id="bold" onclick="updateSpitter(event);"></input>
