add more gradient support

--- a/Hexnicks/index.html
+++ b/Hexnicks/index.html
@@ -68,10 +68,11 @@
       <!--  Yoinked from saboor -->
       <select type="select" id="types" style="width:150px; border-radius: 10px; padding-right: 6px; padding-left: 6px; padding-top: 6px; padding-bottom: 6px; color:black;" onchange="rgbtype = this.options[this.selectedIndex].innerText; updateSpitter(event);">
         <option value='0'>chat (&#rrggbb)</option>
-        <option value='1'>chat (&x&r&r&g&g&b&b)</option>
-        <option value='2'>/nick (&#rrggbb)</option> 
-        <option value='3'>/nick (&x&r&r&g&g&b&b)</option>
-        <option value='4'>console (§x§r§r§g§g§b§b)</option>
+        <option value='1'>chat (<#rrggbb>)</option>
+        <option value='2'>chat (&x&r&r&g&g&b&b)</option>
+        <option value='3'>/nick (&#rrggbb)</option> 
+        <option value='4'>/nick (&x&r&r&g&g&b&b)</option>
+        <option value='5'>console (§x§r§r§g§g§b§b)</option>
       </select>
     </div>
     <div id="coloramountlist">
