fixed changing hex colors not updating output

--- a/Hexnicks/index.html
+++ b/Hexnicks/index.html
@@ -29,8 +29,8 @@
   <div class="row">
     <label for="color-$NUM">Hex Color #$NUM</label>
     <input class="form-control col-md-1 hexColor" id="color-$NUM" value="$VAL"
-           data-jscolor="{preset:'small dark', position:'right'}" oninput="javascript: updateSpitter(event)"
-           onchange="javascript: updateSpitter(event)"/>
+           data-jscolor="{preset:'small dark', position:'right'}" oninput="javascript: updateOutputText(event)"
+           onchange="javascript: updateOutputText(event)"/>
   </div>
 </div>
 
