--- a/Hexnicks/index.html
+++ b/Hexnicks/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="./style.css">
-  <link rel="shortcut icon" href="/assets/images/rgb.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/assets/images/emc.png" type="image/x-icon">
   <title>RGB Gradient Creator</title>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 </head>
