add github and discord links to navbar

--- a/Hexnicks/index.html
+++ b/Hexnicks/index.html
@@ -21,6 +21,8 @@
       <li><a href="../CircleGen/index.html">Circle Generator</a></li>
       <li><a href="../AnimTAB/index.html">Animated TAB</a></li>
       <li><a href="#">Coming Soon</a></li>
+      <li><a href="https://github.com/Oli-idk/EasyMC"><img src="/assets/images/github.png" height="20px"></a></a></li>
+      <li><a href="https://discord.akiradev.xyz"><img src="/assets/images/discord.png" height="20px"></a></a></li>
     </ul>
   </div>
 </nav>
