--- a/AnimTAB/index.html
+++ b/AnimTAB/index.html
@@ -24,6 +24,8 @@
           <li><a href="../CircleGen/">Circle Generator</a></li>
           <li class="active" ><a href="#">Animated TAB</a></li>
           <li><a href="#">Coming Soon</a></li>
+      <li><a href="https://github.com/Oli-idk/EasyMC"><img src="/assets/images/github.png" height="20px"></a></a></li>
+      <li><a href="https://discord.akiradev.xyz"><img src="/assets/images/discord.png" height="20px"></a></a></li>
         </ul>
       </div>
     </nav>
