--- a/CircleGen/index.html
+++ b/CircleGen/index.html
@@ -27,6 +27,8 @@
         <li class="active"><a href="#">Circle Generator</a></li>
         <li><a href="../AnimTAB/">Animated TAB</a></li>
         <li><a href="#">Coming Soon</a></li>
+      <li><a href="https://github.com/Oli-idk/EasyMC"><img src="/assets/images/github.png" height="20px"></a></a></li>
+      <li><a href="https://discord.akiradev.xyz"><img src="/assets/images/discord.png" height="20px"></a></a></li>
       </ul>
     </div>
   </nav>
