--- a/AnimTAB/index.html
+++ b/AnimTAB/index.html
@@ -4,14 +4,10 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="/assets/images/emc.png" type="image/x-icon">
     <title>Animated TAB</title>
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script>
-      function warning() {
-        alert("Slight visual bugs are still present working on fixing those!");
-      }
-      </script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </head>
-  <body onload="warning()">
+  <body>
 
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
@@ -19,13 +15,18 @@
           <a class="navbar-brand" href="#">EasyMC</a>
         </div>
         <ul class="nav navbar-nav">
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="../Hexnicks/">RGB Nicknames</a></li>
+          <li><a href="../">Home</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Gradients <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="../Hexnicks/">RGB Nicknames</a></li>
+              <li class="active"><a href="#">Animated TAB</a></li>
+            </ul>
+          </li>
           <li><a href="../CircleGen/">Circle Generator</a></li>
-          <li class="active" ><a href="#">Animated TAB</a></li>
           <li><a href="#">Coming Soon</a></li>
-      <li><a href="https://github.com/Oli-idk/EasyMC"><img src="/assets/images/github.png" height="20px"></a></a></li>
-      <li><a href="https://discord.akiradev.xyz"><img src="/assets/images/discord.png" height="20px"></a></a></li>
+          <li><a href="https://github.com/Oli-idk/EasyMC"><img src="/assets/images/github.png" height="20px"></a></a></li>
+          <li><a href="https://discord.akiradev.xyz"><img src="/assets/images/discord.png" height="20px"></a></a></li>
         </ul>
       </div>
     </nav>
